--- a/backend/package.json
+++ b/backend/package.json
@@ -1,21 +1,39 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "FuelEU Maritime Compliance Platform Backend API",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node src/infrastructure/server/index.ts",
+    "dev": "nodemon --exec ts-node src/infrastructure/server/index.ts",
+    "test": "jest --detectOpenHandles --forceExit",
+    "test:watch": "jest --watch",
+    "test:unit": "jest src/core"
   },
-  "keywords": [],
+  "keywords": [
+    "FuelEU",
+    "Hexagonal",
+    "TypeScript"
+  ],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^24.10.0",
-    "express": "^5.1.0",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.25",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.14.12",
+    "@types/pg": "^8.15.6",
+    "@types/supertest": "^6.0.2",
+    "express": "^4.21.2",
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.4",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "typescript": "^5.5.4"
   },
   "dependencies": {
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "pg": "^8.16.3"
   }
 }
