--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.25",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.14.12",
+    "@types/node": "^20.19.24",
     "@types/pg": "^8.15.6",
     "@types/supertest": "^6.0.2",
     "express": "^4.21.2",
@@ -33,7 +33,9 @@
     "typescript": "^5.5.4"
   },
   "dependencies": {
+    "@prisma/client": "^6.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "pg": "^8.16.3"
   }
 }
